# vm

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cep_reader/: CMakeLists.txt  cep_reader.c  test.csv
cep_reader/include/: cep_avl.h
cep_reader/lib/: README.md  defaults.cmake
cep_reader/lib/cep_avl/: CMakeLists.txt  cep_avl.c  internal.h
cep_reader/lib/cep_avl/tests/: cep_avl_tests.cpp
etc/: github_webhook.cfg
gitHub_webhook/: .README  CMakeLists.txt  gitHub_webhook.c
gitHub_webhook/include/: TCPServer_gitHub.h
gitHub_webhook/src/: TCPServer_gitHub.c
include/: JSON.h  TCPServer.h  avl.h  bst.h  dijkstra.h  heap.h  hmac.h  log.h  rwe.h  sllist.h
lib/: CMakeLists.txt  README.md  defaults.cmake
lib/JSON/: CMakeLists.txt  JSON.c
lib/JSON/tests/: JSON_tests.cpp
lib/TCPServer/: CMakeLists.txt  TCPServer.c
lib/avl/: avl.c  internal.h
lib/avl/tests/: avl_tests.cpp
lib/bst/: bst.c  internal.h
lib/bst/tests/: bst_tests.cpp
lib/d_structs/: d_structs.c
lib/dijkstra/: dijkstra.c  internal.h
lib/dijkstra/tests/: dijkstra_tests.cpp
lib/hashTable/: hashTable.c
lib/hashTable/tests/: hashTable_tests.cpp
lib/heap/: CMakeLists.txt  heap.c
lib/heap/tests/: heap_tests.cpp
lib/hmac/: CMakeLists.txt  hmac.c
lib/hmac/tests/: hmac_tests.cpp
lib/log/: CMakeLists.txt  log.c
lib/log/tests/: log_tests.cpp
lib/rwe/: CMakeLists.txt  rwe.c
lib/sllist/: CMakeLists.txt  sllist.c
lib/sllist/tests/: sllist_tests.cpp
lib/sorter_comp/: Makefile  cmake_install.cmake
scripts/: log.sh
sorter_comp/: CMakeLists.txt
sorter_comp/src/: order_comp.c
workers/: init.sh
workers/discord_bots/: faro_clt.sh  fausto_clt.sh
